# bazel-shellmock

./: LICENSE  README.md  WORKSPACE  deps.bzl
tests/: BUILD.bazel  hello_world_test.bats  sample.sh  sample_test.bats
tests/bats-shellmock/: BUILD.bazel
